# io-chess

./: .gitignore  CMakeLists.txt  README.md  project_structure.txt  tree.py
resources/: README.md
src/: main.cpp
src/board/: GameBoard.cpp  GameBoard.h
src/pieces/: Bishop.cpp  Bishop.h  ChessPiece.cpp  ChessPiece.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
